--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
       body { font-family:Iwona, sans-serif; }
       a { text-decoration:none; }
       .title { font-size:42pt; }
-      .title img { vertical-align:middle; }
+      .title img { background:url("https://s.gravatar.com/avatar/369487e8ccb12c519619a51ba96c9dcc?s=150"); border-radius:150px; width:150px; height:150px; vertical-align:middle; }
       .menu, .title { text-align:center; }
       .menu a { padding:1em; }
       p.standalone { font-size:18pt; margin:2em; }
@@ -25,7 +25,7 @@
     <link rel="image_src" type="image/png" href="https://s.gravatar.com/avatar/369487e8ccb12c519619a51ba96c9dcc?s=150"/>
   </head>
   <body>
-    <div class="title"><img src="https://s.gravatar.com/avatar/369487e8ccb12c519619a51ba96c9dcc?s=150" alt=""/> Andre Masella</div>
+    <div class="title"><img/> Andre Masella</div>
     <p class="standalone">I'm a computer engineering and bioinformatician currently working at the <a href="http://oicr.on.ca/">Ontario Institute for Cancer Research</a>. In my spare time, I <a href="https://github.com/apmasell/recipe#recipes">cook</a>, build a Jacquard loom, and work on <a href="http://flabbergast.org">the Flabbergast configuration language</a>. If you like <a href="https://tmux.github.io/">tmux</a>, you might like my GUI front-end with SSH support, <a href="https://github.com/apmasell/tabbedmux#tabbedmux">TabbedMux</a>. If you think you've written a really good framework, you might want to <a href="framework-checklist.txt">consult my framework checklist</a>. If you're inviting me to dinner, you might need to checkout all <a href="badfood.html">the things I can't eat</a>.</p>
     <div class="menu">
       <a href="http://twitter.com/apmasell" title="Twitter">
