--- a/html/pickalanguage.html
+++ b/html/pickalanguage.html
@@ -43,6 +43,11 @@ const tree = {
           name: "Java",
           description:
             "Competently delivering features users gave up asking for a decade ago."
+        },
+        "If it's built by a committe, it won't be a tire fire": {
+          name: "Ada",
+          description:
+            "Yes, it has every feature every wanted by an avionics engineer in the 80s."
         }
       }
     },
