Add Twitch link

--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,7 @@
       a:hover #scholar path { fill:#4d90fe; }
       a:hover #youtube path { fill:#e75a4d; }
       a:hover #stackoverflow path { fill:#f48023; }
+      a:hover #twitch path { fill:#9146ff; }
       a:hover #dockerhub path { fill:#22b8eb; }
       a:hover #medium path { fill:#00AB6C; }
     </style>
@@ -64,6 +65,11 @@
       <a href="http://stackoverflow.com/users/1034226/apmasell" title="StackOverflow">
         <svg xmlns="http://www.w3.org/2000/svg" width="128" height="128" version="1.1" viewBox="0 0 128 128" class="svgicon" id="stackoverflow">
           <path d="M 83.450926,1.6819071 74.52898,8.317605 107.71212,52.931984 116.63406,46.294738 83.450926,1.6819071 Z M 62.986211,19.439059 55.87034,27.983063 98.594998,63.56552 105.71087,55.021516 62.986211,19.439059 Z M 46.616918,42.629925 41.922053,52.710485 92.324852,76.184808 97.019722,66.104248 46.616918,42.629925 Z M 37.010336,67.882441 34.722538,78.765357 89.135569,90.201248 91.42337,79.318331 37.010336,67.882441 Z m -25.644401,13.951384 0,44.484265 100.018735,0 0,-44.484265 -11.1199,0 0,33.362805 -77.77893,0 0,-33.362805 -11.119905,0 z m 22.252202,11.119905 0,11.1199 55.601076,0 0,-11.1199 -55.601076,0 z"/>
+        </svg>
+      </a>
+      <a href="https://twitch.tv/apmasell" title="Twitch">
+        <svg xmlns="http://www.w3.org/2000/svg" width="128" height="128" version="1.1" viewBox="0 0 128 128" class="svgicon" id="twitch">
+          <path d="m 61.869678,27.784543 h 8.521284 v 25.563852 h -8.521284 z m 23.433531,0 h 8.521284 V 53.348395 H 85.303209 Z M 34.175505,4.3510119 12.872295,25.654222 v 76.691558 h 25.563852 v 21.30321 l 21.30321,-21.30321 H 76.781925 L 115.1277,64 V 4.3510119 Z M 106.60642,59.739358 89.563851,76.781926 H 72.521283 L 57.609036,91.694173 V 76.781926 H 38.436147 v -63.90963 h 68.170273 z"/>
         </svg>
       </a>
       <a href="https://hub.docker.com/u/apmasell/" title="DockerHub">
