Add local avatar and Steam link

--- a/html/index.html
+++ b/html/index.html
@@ -11,11 +11,11 @@
       body { font-family:Iwona, sans-serif; }
       a { text-decoration:none; }
       .title { font-size:42pt; }
-      .title img { background:url("https://s.gravatar.com/avatar/369487e8ccb12c519619a51ba96c9dcc?s=150"); border-radius:150px; width:150px; height:150px; vertical-align:middle; }
+      .title img { background:url("avatar.jpg"); border-radius:150px; width:150px; height:150px; vertical-align:middle; }
       .menu, .title { text-align:center; }
       .menu a { padding:1em; }
       p.standalone { font-size:18pt; margin:2em; }
-      .svgicon path { fill:#aaa; fill-opacity:1; fill-rule:nonzero; stroke:none }
+      .svgicon path { fill:#aaa; fill-opacity:1; fill-rule:evenodd; stroke:none }
       a:hover #twitter path { fill:#1da1f2; }
       a:hover #facebook path { fill:#3c5a99; }
       a:hover #github path { fill:#1b1817; }
@@ -25,8 +25,9 @@
       a:hover #twitch path { fill:#9146ff; }
       a:hover #dockerhub path { fill:#22b8eb; }
       a:hover #medium path { fill:#00AB6C; }
+      a:hover #steam path { fill:#2A475E; }
     </style>
-    <link rel="image_src" type="image/png" href="https://s.gravatar.com/avatar/369487e8ccb12c519619a51ba96c9dcc?s=150"/>
+    <link rel="image_src" type="image/png" href="avatar.jpg"/>
   </head>
   <body>
     <div class="title"><img/> Andre Masella</div>
@@ -70,6 +71,11 @@
       <a href="https://twitch.tv/apmasell" title="Twitch">
         <svg xmlns="http://www.w3.org/2000/svg" width="128" height="128" version="1.1" viewBox="0 0 128 128" class="svgicon" id="twitch">
           <path d="m 61.869678,27.784543 h 8.521284 v 25.563852 h -8.521284 z m 23.433531,0 h 8.521284 V 53.348395 H 85.303209 Z M 34.175505,4.3510119 12.872295,25.654222 v 76.691558 h 25.563852 v 21.30321 l 21.30321,-21.30321 H 76.781925 L 115.1277,64 V 4.3510119 Z M 106.60642,59.739358 89.563851,76.781926 H 72.521283 L 57.609036,91.694173 V 76.781926 H 38.436147 v -63.90963 h 68.170273 z"/>
+        </svg>
+      </a>
+      <a href="https://steamcommunity.com/profiles/76561198053829685/" title="Steam">
+        <svg xmlns="http://www.w3.org/2000/svg" width="128" height="128" version="1.1" viewBox="0 0 128 128" class="svgicon" id="steam">
+          <path d="m 59.84592,52.076398 c 0,0.09551 0,0.191017 0.0049,0.280678 L 45.95921,72.536652 c -2.250296,-0.10233 -4.50839,0.292373 -6.649534,1.174365 -0.943877,0.384957 -1.828305,0.857627 -2.658156,1.403389 L 6.1477414,62.556991 c 2.388e-4,0 -0.7058369,11.612076 2.2356779,20.266314 l 21.5644497,8.897881 c 1.082754,4.838773 4.402161,9.083054 9.299406,11.124794 8.012479,3.34766 17.250975,-0.4678 20.584026,-8.483692 0.867373,-2.095339 1.271822,-4.293009 1.213347,-6.485805 L 80.921131,73.672034 c 0.160805,0.0049 0.326483,0.0097 0.487289,0.0097 11.894703,0 21.5625,-9.697034 21.5625,-21.605381 0,-11.909322 -9.667797,-21.597585 -21.5625,-21.597585 -11.889831,0 -21.5625,9.688263 -21.5625,21.597585 z m -3.333051,40.892246 c -2.579704,6.193435 -9.697034,9.131776 -15.883644,6.554025 -2.854047,-1.18898 -5.008835,-3.36716 -6.251907,-5.964407 l 7.019385,2.909107 c 4.562479,1.90043 9.796928,-0.26313 11.693454,-4.824149 1.902373,-4.56589 -0.255826,-9.80911 -4.815869,-11.709534 l -7.256207,-3.006568 c 2.799957,-1.062288 5.982923,-1.101271 8.956843,0.136441 2.998284,1.247458 5.324597,3.596186 6.557436,6.597881 1.232839,3.001695 1.227966,6.315255 -0.01949,9.307204 M 81.40842,66.469915 c -7.918433,0 -14.365255,-6.456568 -14.365255,-14.393517 0,-7.930614 6.446822,-14.389131 14.365255,-14.389131 7.923305,0 14.370127,6.458517 14.370127,14.389131 0,7.936949 -6.446822,14.393517 -14.370127,14.393517 M 70.644225,52.05447 c 0,-5.970742 4.833898,-10.813411 10.788559,-10.813411 5.959534,0 10.793432,4.842669 10.793432,10.813411 0,5.971229 -4.833898,10.809513 -10.793432,10.809513 -5.954661,0 -10.788559,-4.838284 -10.788559,-10.809513 z M 8.3839554,82.623517 c 7.0135386,23.394703 28.7090676,40.440043 54.3862286,40.440043 31.352119,0 56.769066,-25.416951 56.769066,-56.769069 0,-31.352606 -25.416947,-56.7690677 -56.769066,-56.7690677 -30.085656,0 -54.7029659,23.4039617 -56.6472456,52.9974577 3.673714,6.169068 5.1072666,9.984534 2.261553,20.100636 z"/>
         </svg>
       </a>
       <a href="https://hub.docker.com/u/apmasell/" title="DockerHub">
