--- a/html/index.html
+++ b/html/index.html
@@ -16,16 +16,17 @@
       .menu a { padding:1em; }
       p.standalone { font-size:18pt; margin:2em; }
       .svgicon path { fill:#aaa; fill-opacity:1; fill-rule:evenodd; stroke:none }
-      a:hover #twitter path { fill:#1da1f2; }
+      a:hover #dockerhub path { fill:#22b8eb; }
       a:hover #facebook path { fill:#3c5a99; }
       a:hover #github path { fill:#1b1817; }
-      a:hover #scholar path { fill:#4d90fe; }
-      a:hover #youtube path { fill:#e75a4d; }
-      a:hover #stackoverflow path { fill:#f48023; }
-      a:hover #twitch path { fill:#9146ff; }
-      a:hover #dockerhub path { fill:#22b8eb; }
+      a:hover #linkedin path { fill:#0a66c2; }
       a:hover #medium path { fill:#00AB6C; }
+      a:hover #scholar path { fill:#4d90fe; }
+      a:hover #stackoverflow path { fill:#f48023; }
       a:hover #steam path { fill:#2A475E; }
+      a:hover #twitch path { fill:#9146ff; }
+      a:hover #twitter path { fill:#1da1f2; }
+      a:hover #youtube path { fill:#e75a4d; }
     </style>
     <link rel="image_src" type="image/png" href="avatar.jpg"/>
   </head>
@@ -46,6 +47,11 @@
       <a href="https://github.com/apmasell" title="GitHub">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="128" height="128" viewBox="0 0 128 128" id="github" class="svgicon">
           <path d="m 63.994986,10.902109 c -30.059129,0 -54.436634,24.374163 -54.436634,54.443318 0,24.049984 15.597727,44.457033 37.231342,51.659323 2.723837,0.49798 3.71645,-1.18311 3.71645,-2.62691 0,-1.29341 -0.04679,-4.71575 -0.07353,-9.25771 -15.143197,3.28866 -18.338274,-7.299209 -18.338274,-7.299209 -2.476519,-6.28989 -6.045915,-7.9643 -6.045915,-7.9643 -4.943013,-3.37555 0.374318,-3.30871 0.374318,-3.30871 5.464385,0.38434 8.338618,5.61144 8.338618,5.61144 4.856116,8.318559 12.743546,5.91557 15.845044,4.5219 0.494635,-3.51592 1.901673,-5.91557 3.455764,-7.27582 -12.088489,-1.37696 -24.798614,-6.04591 -24.798614,-26.9075 0,-5.945651 2.122253,-10.801768 5.604754,-14.608455 -0.561478,-1.376959 -2.429729,-6.911528 0.534741,-14.407928 0,0 4.568693,-1.463854 14.969406,5.578017 4.341428,-1.20651 9.000359,-1.808093 13.629211,-1.831488 4.62551,0.02406 9.281098,0.624978 13.629211,1.831488 10.394028,-7.041871 14.956038,-5.578017 14.956038,-5.578017 2.971154,7.4964 1.102903,13.030969 0.544767,14.407928 3.489185,3.806687 5.594732,8.662804 5.594732,14.608455 0,20.91506 -12.730182,25.51717 -24.855434,26.86405 1.951804,1.6811 3.693055,5.00317 3.693055,10.08321 0,7.275819 -0.06684,13.147949 -0.06684,14.932649 0,1.45717 0.982587,3.15163 3.743187,2.62023 21.616907,-7.21566 37.201267,-27.606009 37.201267,-51.652643 0,-30.069155 -24.377509,-54.443318 -54.446664,-54.443318"/>
+        </svg>
+      </a>
+      <a href="https://www.linkedin.com/in/apmasell/" title="LinkedIn">
+        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="128" height="128" viewBox="0 0 128 128" id="linkedin" class="svgicon">
+          <path d="M 106.45576,106.45606 H 88.58736 V 78.473573 c 0,-6.672789 -0.119223,-15.262582 -9.293139,-15.262582 -9.306646,0 -10.73066,7.269928 -10.73066,14.776589 v 28.46633 H 50.695751 V 48.910703 h 17.153111 v 7.86379 h 0.240599 c 3.492543,-5.971598 10.010529,-9.551551 16.924454,-9.294802 18.110025,0 21.449385,11.911873 21.449385,27.409132 z M 30.534425,41.04476 h -0.002 c -5.688421,0 -10.369274,-4.680266 -10.369274,-10.368686 0,-5.68842 4.680853,-10.369225 10.369274,-10.369225 5.687832,0 10.368147,4.679728 10.369224,10.367071 v 0.002 c 0,5.687343 -4.679728,10.368148 -10.367071,10.368686 m 8.933905,65.411304 H 21.581824 V 48.910508 H 39.468526 Z M 115.36338,3.7133887 H 12.602599 C 7.7788357,3.6589164 3.7630542,7.5813659 3.704275,12.405129 V 115.59259 c 0.056626,4.82645 4.0718689,8.75321 8.898324,8.70143 H 115.36338 c 4.83836,0.061 8.86758,-3.86524 8.93235,-8.70143 V 12.398326 c -0.0648,-4.8340411 -4.09939,-8.755952 -8.93235,-8.6922786"/>
         </svg>
       </a>
       <a href="https://medium.com/@apmasell" title="Medium">
